app/k8s/evercran-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.service.group: evercran
    kompose.service.type: nodeport
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: evercran
  name: evercran
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: evercran
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.service.group: evercran
        kompose.service.type: nodeport
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/app-default: "true"
        io.kompose.service: evercran
    spec:
      containers:
        - env:
            - name: PG_HOST
              value: db
            - name: PG_PASS_FILE
              value: /db-password
            - name: PG_USER
              value: postgres
            - name: PORT
              value: "3000"
          image: rhub/evercran:0.0.1
          name: evercran
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /packages
              name: packages
      restartPolicy: Always
      volumes:
        - name: packages
          persistentVolumeClaim:
            claimName: packages
status: {}
