app/k8s/shell-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.service.group: evercran
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: shell
  name: shell
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shell
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.service.group: evercran
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/app-default: "true"
        io.kompose.service: shell
    spec:
      containers:
        - args:
            - /root/entrypoint.sh
          image: rhub/evercran-shell:0.0.4
          name: shell
          resources: {}
          volumeMounts:
            - mountPath: /packages
              name: packages2
      restartPolicy: Always
      volumes:
        - name: packages2
          persistentVolumeClaim:
            claimName: packages2
status: {}
